<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WalkingTour</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="walk_tour">Walking Tour Creator</string>
    <string name="swap1">Name your walk!</string>
    <string name="title_activity_secondscreen">Secondscreen</string>
    <string name="map_title">Your Map</string>
    <string name="walk2">This is screen 2</string>
    <string name="swap2">Go to Screen 1 !</string>
    <string name="gomap">Go to Map!</string>
    <string name="entertext">Enter text here!</string>
    <string name="enterwalk">Enter your walk name!</string>
    <string name="enterdesc">Enter your short description!</string>
    <string name="enterldesc">Enter your long description!</string>
    <string name="intro"> Welcome to group 3\'s walking tour creator.</string>
    <string name="poi"> Add POI.</string>
    <string name="cancelw"> Cancel Walk</string>
    <string name="enterpoi">Enter POI Name.</string>
    <string name="poidesc">Enter POI Description</string>
    <string name="addp">Add your POI!</string>
    <string name="take">Add picture to POI.</string>
    <string name="up"> Upload Walk!</string>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>

</resources>