<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black" >

    <EditText
        android:id="@+id/poidescr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/entertext"
        android:textColor="@color/white" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/addpoi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/takepic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:text="@string/addp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/takepic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/poidescr"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:text="@string/take"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/poiname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/entertext"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/enterpoi"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/poiname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:paddingTop="20dp"
        android:text="@string/poidesc"
        android:textColor="@color/white" />

</RelativeLayout>